fix bug course: update course request, response, controller and service with enum error handling