@@ -4,7 +4,9 @@ import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.*;
 import static org.mockito.Mockito.*;
 
+import java.time.LocalDateTime;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
@@ -15,7 +17,6 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
-import org.springframework.http.HttpStatus;
 import org.springframework.web.server.ResponseStatusException;
 
 import com.mycompany.dto.request.CourseRequest;
@@ -23,20 +24,25 @@ import com.mycompany.dto.response.CourseGroupResponse;
 import com.mycompany.dto.response.CourseResponse;
 import com.mycompany.entity.Course;
 import com.mycompany.entity.CourseType;
-import com.mycompany.entity.Lesson;
-import com.mycompany.mapper.CourseMapper;
+import com.mycompany.entity.UserCourse;
+import com.mycompany.entity.UserEntity;
+import com.mycompany.mapstruct.CourseMapper;
 import com.mycompany.repository.CourseRepository;
+import com.mycompany.repository.UserCourseRepository;
+import com.mycompany.repository.UserRepository;
 
-/**
- * Test class for CourseServiceImpl
- * Tests all business logic for course operations
- */
 @ExtendWith(MockitoExtension.class)
-@DisplayName("CourseServiceImpl Tests")
+@DisplayName("CourseService Tests")
 class CourseServiceImplTest {
 
     @Mock
     private CourseRepository courseRepository;
+
+    @Mock
+    private UserRepository userRepository;
+
+    @Mock
+    private UserCourseRepository userCourseRepository;
 
     @Mock
     private CourseMapper courseMapper;
@@ -45,91 +51,86 @@ class CourseServiceImplTest {
     private CourseServiceImpl courseService;
 
     private Course course;
-    private CourseType courseType;
     private CourseRequest courseRequest;
     private CourseResponse courseResponse;
+    private UserEntity user;
+    private CourseType courseType;
 
     @BeforeEach
     void setUp() {
-        // Initialize CourseType
+        // Setup CourseType
         courseType = new CourseType();
         courseType.setId(1L);
-        courseType.setCode("BACKEND");
-        courseType.setDescription("Backend development courses");
+        courseType.setCode("BASIC");
+        courseType.setDescription("Basic Courses");
 
-        // Initialize Course entity
+        // Setup Course
         course = new Course();
         course.setId(1L);
         course.setTitle("Spring Boot Basics");
+        course.setDescription("Learn Spring Boot from basics");
+        course.setLinkImg("https://example.com/image.jpg");
         course.setType(courseType);
-        course.setLinkImg("https://example.com/spring-boot.jpg");
-        course.setDescription("Learn Spring Boot fundamentals");
-        course.setActive(true);
         course.setLessons(new ArrayList<>());
-        course.setUsers(new ArrayList<>());
+        course.setUserCourses(new ArrayList<>());
+        course.setCreatedAt(LocalDateTime.now());
 
-        // Initialize CourseRequest DTO
-        courseRequest = new CourseRequest(
-                "Spring Boot Basics",
-                "BACKEND",
-                "https://example.com/spring-boot.jpg",
-                "Learn Spring Boot fundamentals");
+        // Setup CourseRequest
+        courseRequest = new CourseRequest();
+        courseRequest.setTitle("Spring Boot Basics");
+        courseRequest.setDescription("Learn Spring Boot from basics");
+        courseRequest.setLinkImg("https://example.com/image.jpg");
+        courseRequest.setType("BASIC");
 
-        // Initialize CourseResponse DTO
-        courseResponse = new CourseResponse(
-                "1",
-                "Spring Boot Basics",
-                "BACKEND",
-                "https://example.com/spring-boot.jpg",
-                "Learn Spring Boot fundamentals",
-                0);
+        // Setup CourseResponse
+        courseResponse = new CourseResponse();
+        courseResponse.setId(1L);
+        courseResponse.setTitle("Spring Boot Basics");
+        courseResponse.setDescription("Learn Spring Boot from basics");
+        courseResponse.setLinkImg("https://example.com/image.jpg");
+        courseResponse.setType("BASIC");
+        courseResponse.setTotalLessons(0);
+
+        // Setup User
+        user = new UserEntity();
+        user.setId(1L);
+        user.setUsername("testuser");
+        user.setUserCourses(new ArrayList<>());
     }
 
-    // ==================== GET COURSE DETAILS TESTS ====================
-
     @Test
-    @DisplayName("getCourseDetails - Should return course when found")
-    void testGetCourseDetails_Success() {
+    @DisplayName("Should get course details successfully")
+    void testGetCourseDetails() {
         // Arrange
-        Long courseId = 1L;
-        when(courseRepository.findById(courseId)).thenReturn(Optional.of(course));
+        when(courseRepository.findById(1L)).thenReturn(Optional.of(course));
         when(courseMapper.toCourseResponse(course)).thenReturn(courseResponse);
 
         // Act
-        CourseResponse result = courseService.getCourseDetails(courseId);
+        CourseResponse result = courseService.getCourseDetails(1L);
 
         // Assert
         assertNotNull(result);
         assertEquals("Spring Boot Basics", result.getTitle());
-        assertEquals("BACKEND", result.getType());
-        verify(courseRepository, times(1)).findById(courseId);
-        verify(courseMapper, times(1)).toCourseResponse(course);
+        verify(courseRepository).findById(1L);
     }
 
     @Test
-    @DisplayName("getCourseDetails - Should throw 404 when course not found")
+    @DisplayName("Should throw exception when course not found")
     void testGetCourseDetails_NotFound() {
         // Arrange
-        Long courseId = 999L;
-        when(courseRepository.findById(courseId)).thenReturn(Optional.empty());
+        when(courseRepository.findById(1L)).thenReturn(Optional.empty());
 
         // Act & Assert
-        ResponseStatusException exception = assertThrows(
-                ResponseStatusException.class,
-                () -> courseService.getCourseDetails(courseId));
-
-        assertEquals(HttpStatus.NOT_FOUND, exception.getStatusCode());
-        assertTrue(exception.getReason().contains("Course not found"));
-        verify(courseRepository, times(1)).findById(courseId);
+        assertThrows(ResponseStatusException.class, () -> {
+            courseService.getCourseDetails(1L);
+        });
     }
 
-    // ==================== CREATE COURSE TESTS ====================
-
     @Test
-    @DisplayName("createCourse - Should create new course successfully")
-    void testCreateCourse_Success() {
+    @DisplayName("Should create course successfully")
+    void testCreateCourse() {
         // Arrange
-        when(courseRepository.findByTitle(courseRequest.getTitle())).thenReturn(Optional.empty());
+        when(courseRepository.findByTitle("Spring Boot Basics")).thenReturn(Optional.empty());
         when(courseMapper.toCourseEntity(courseRequest)).thenReturn(course);
         when(courseRepository.save(course)).thenReturn(course);
         when(courseMapper.toCourseResponse(course)).thenReturn(courseResponse);
@@ -140,302 +141,96 @@ class CourseServiceImplTest {
         // Assert
         assertNotNull(result);
         assertEquals("Spring Boot Basics", result.getTitle());
-        verify(courseRepository, times(1)).findByTitle(courseRequest.getTitle());
-        verify(courseRepository, times(1)).save(course);
-        verify(courseMapper, times(1)).toCourseEntity(courseRequest);
-        verify(courseMapper, times(1)).toCourseResponse(course);
+        verify(courseRepository).save(course);
     }
 
     @Test
-    @DisplayName("createCourse - Should throw 409 when title already exists")
+    @DisplayName("Should throw exception when course title already exists")
     void testCreateCourse_TitleAlreadyExists() {
         // Arrange
-        when(courseRepository.findByTitle(courseRequest.getTitle())).thenReturn(Optional.of(course));
+        when(courseRepository.findByTitle("Spring Boot Basics")).thenReturn(Optional.of(course));
 
         // Act & Assert
-        ResponseStatusException exception = assertThrows(
-                ResponseStatusException.class,
-                () -> courseService.createCourse(courseRequest));
-
-        assertEquals(HttpStatus.CONFLICT, exception.getStatusCode());
-        assertTrue(exception.getReason().contains("already exists"));
-        verify(courseRepository, times(1)).findByTitle(courseRequest.getTitle());
-        verify(courseRepository, never()).save(any(Course.class));
+        assertThrows(ResponseStatusException.class, () -> {
+            courseService.createCourse(courseRequest);
+        });
     }
 
     @Test
-    @DisplayName("createCourse - Should handle null request")
-    void testCreateCourse_NullRequest() {
-        // Act & Assert
-        assertThrows(NullPointerException.class, () -> courseService.createCourse(null));
-    }
-
-    // ==================== UPDATE COURSE TESTS ====================
-
-    @Test
-    @DisplayName("updateCourse - Should update course successfully")
-    void testUpdateCourse_Success() {
+    @DisplayName("Should update course successfully")
+    void testUpdateCourse() {
         // Arrange
-        Long courseId = 1L;
-        CourseRequest updateRequest = new CourseRequest(
-                "Spring Boot Advanced",
-                "BACKEND",
-                "https://example.com/advanced.jpg",
-                "Learn advanced Spring Boot");
+        CourseRequest updateRequest = new CourseRequest();
+        updateRequest.setTitle("Spring Boot Advanced");
+        updateRequest.setDescription("Advanced Spring Boot");
+        updateRequest.setLinkImg("https://example.com/new.jpg");
+        updateRequest.setType("ADVANCED");
 
         Course updatedCourse = new Course();
         updatedCourse.setId(1L);
         updatedCourse.setTitle("Spring Boot Advanced");
-        updatedCourse.setType(courseType);
-        updatedCourse.setLinkImg("https://example.com/advanced.jpg");
-        updatedCourse.setDescription("Learn advanced Spring Boot");
-        updatedCourse.setActive(true);
-        updatedCourse.setLessons(new ArrayList<>());
-        updatedCourse.setUsers(new ArrayList<>());
+        updatedCourse.setDescription("Advanced Spring Boot");
+        updatedCourse.setLinkImg("https://example.com/new.jpg");
 
-        CourseResponse updatedResponse = new CourseResponse(
-                "1",
-                "Spring Boot Advanced",
-                "BACKEND",
-                "https://example.com/advanced.jpg",
-                "Learn advanced Spring Boot",
-                0);
-
-        when(courseRepository.findById(courseId)).thenReturn(Optional.of(course));
-        when(courseRepository.findByTitle(updateRequest.getTitle())).thenReturn(Optional.empty());
-        when(courseRepository.save(any(Course.class))).thenReturn(updatedCourse);
-        when(courseMapper.toCourseResponse(updatedCourse)).thenReturn(updatedResponse);
+        when(courseRepository.findById(1L)).thenReturn(Optional.of(course));
+        when(courseRepository.findByTitle("Spring Boot Advanced")).thenReturn(Optional.empty());
+        when(courseRepository.save(course)).thenReturn(updatedCourse);
+        when(courseMapper.toCourseResponse(updatedCourse)).thenReturn(courseResponse);
 
         // Act
-        CourseResponse result = courseService.updateCourse(courseId, updateRequest);
+        CourseResponse result = courseService.updateCourse(1L, updateRequest);
 
         // Assert
         assertNotNull(result);
-        assertEquals("Spring Boot Advanced", result.getTitle());
-        verify(courseRepository, times(1)).findById(courseId);
-        verify(courseRepository, times(1)).findByTitle(updateRequest.getTitle());
-        verify(courseRepository, times(1)).save(any(Course.class));
+        verify(courseRepository).save(course);
     }
 
     @Test
-    @DisplayName("updateCourse - Should throw 404 when course not found")
-    void testUpdateCourse_CourseNotFound() {
-        // Arrange
-        Long courseId = 999L;
-        when(courseRepository.findById(courseId)).thenReturn(Optional.empty());
-
-        // Act & Assert
-        ResponseStatusException exception = assertThrows(
-                ResponseStatusException.class,
-                () -> courseService.updateCourse(courseId, courseRequest));
-
-        assertEquals(HttpStatus.NOT_FOUND, exception.getStatusCode());
-        verify(courseRepository, times(1)).findById(courseId);
-        verify(courseRepository, never()).save(any(Course.class));
-    }
-
-    @Test
-    @DisplayName("updateCourse - Should throw 409 when new title already exists")
+    @DisplayName("Should throw exception when updating to existing title")
     void testUpdateCourse_TitleAlreadyExists() {
         // Arrange
-        Long courseId = 1L;
-        Course existingCourse = new Course();
-        existingCourse.setId(2L);
-        existingCourse.setTitle("Spring Boot Advanced");
+        Course anotherCourse = new Course();
+        anotherCourse.setId(2L);
+        anotherCourse.setTitle("Other Course");
 
-        CourseRequest updateRequest = new CourseRequest(
-                "Spring Boot Advanced",
-                "BACKEND",
-                "https://example.com/advanced.jpg",
-                "Learn advanced Spring Boot");
+        CourseRequest updateRequest = new CourseRequest();
+        updateRequest.setTitle("Other Course");
+        updateRequest.setDescription("Updated");
+        updateRequest.setLinkImg("url");
+        updateRequest.setType("BASIC");
 
-        when(courseRepository.findById(courseId)).thenReturn(Optional.of(course));
-        when(courseRepository.findByTitle(updateRequest.getTitle())).thenReturn(Optional.of(existingCourse));
+        when(courseRepository.findById(1L)).thenReturn(Optional.of(course));
+        when(courseRepository.findByTitle("Other Course")).thenReturn(Optional.of(anotherCourse));
 
         // Act & Assert
-        ResponseStatusException exception = assertThrows(
-                ResponseStatusException.class,
-                () -> courseService.updateCourse(courseId, updateRequest));
-
-        assertEquals(HttpStatus.CONFLICT, exception.getStatusCode());
-        verify(courseRepository, times(1)).findById(courseId);
-        verify(courseRepository, times(1)).findByTitle(updateRequest.getTitle());
-        verify(courseRepository, never()).save(any(Course.class));
+        assertThrows(ResponseStatusException.class, () -> {
+            courseService.updateCourse(1L, updateRequest);
+        });
     }
 
     @Test
-    @DisplayName("updateCourse - Should allow same title update")
-    void testUpdateCourse_SameTitleAllowed() {
+    @DisplayName("Should delete course successfully")
+    void testDeleteCourse() {
         // Arrange
-        Long courseId = 1L;
-        CourseRequest sameRequest = new CourseRequest(
-                "Spring Boot Basics", // Same title
-                "BACKEND",
-                "https://example.com/updated.jpg",
-                "Updated description");
-
-        Course updatedCourse = new Course();
-        updatedCourse.setId(1L);
-        updatedCourse.setTitle("Spring Boot Basics");
-        updatedCourse.setType(courseType);
-        updatedCourse.setLinkImg("https://example.com/updated.jpg");
-        updatedCourse.setDescription("Updated description");
-        updatedCourse.setActive(true);
-        updatedCourse.setLessons(new ArrayList<>());
-        updatedCourse.setUsers(new ArrayList<>());
-
-        CourseResponse updatedResponse = new CourseResponse(
-                "1",
-                "Spring Boot Basics",
-                "BACKEND",
-                "https://example.com/updated.jpg",
-                "Updated description",
-                0);
-
-        when(courseRepository.findById(courseId)).thenReturn(Optional.of(course));
-        when(courseRepository.save(any(Course.class))).thenReturn(updatedCourse);
-        when(courseMapper.toCourseResponse(updatedCourse)).thenReturn(updatedResponse);
+        when(courseRepository.findById(1L)).thenReturn(Optional.of(course));
 
         // Act
-        CourseResponse result = courseService.updateCourse(courseId, sameRequest);
-
-        // Assert
-        assertNotNull(result);
-        assertEquals("Updated description", result.getDescription());
-        verify(courseRepository, times(1)).findById(courseId);
-        verify(courseRepository, times(1)).save(any(Course.class));
-    }
-
-    // ==================== DELETE COURSE TESTS ====================
-
-    @Test
-    @DisplayName("deleteCourse - Should delete course successfully")
-    void testDeleteCourse_Success() {
-        // Arrange
-        Long courseId = 1L;
-        when(courseRepository.findById(courseId)).thenReturn(Optional.of(course));
-        doNothing().when(courseRepository).delete(course);
-
-        // Act
-        String result = courseService.deleteCourse(courseId);
+        String result = courseService.deleteCourse(1L);
 
         // Assert
         assertNotNull(result);
         assertTrue(result.contains("deleted successfully"));
-        verify(courseRepository, times(1)).findById(courseId);
-        verify(courseRepository, times(1)).delete(course);
+        verify(courseRepository).delete(course);
     }
 
     @Test
-    @DisplayName("deleteCourse - Should throw 404 when course not found")
-    void testDeleteCourse_NotFound() {
+    @DisplayName("Should list all courses grouped by type")
+    void testListAllCourses() {
         // Arrange
-        Long courseId = 999L;
-        when(courseRepository.findById(courseId)).thenReturn(Optional.empty());
-
-        // Act & Assert
-        ResponseStatusException exception = assertThrows(
-                ResponseStatusException.class,
-                () -> courseService.deleteCourse(courseId));
-
-        assertEquals(HttpStatus.NOT_FOUND, exception.getStatusCode());
-        verify(courseRepository, times(1)).findById(courseId);
-        verify(courseRepository, never()).delete(any(Course.class));
-    }
-
-    // ==================== LIST COURSES TESTS ====================
-
-    @Test
-    @DisplayName("listAllCourses - Should return grouped courses by type")
-    void testListAllCourses_Success() {
-        // Arrange
-        Course backendCourse1 = new Course();
-        backendCourse1.setId(1L);
-        backendCourse1.setTitle("Spring Boot");
-        backendCourse1.setType(courseType);
-        backendCourse1.setLinkImg("image1.jpg");
-        backendCourse1.setDescription("desc1");
-        backendCourse1.setActive(true);
-        backendCourse1.setLessons(new ArrayList<>());
-        backendCourse1.setUsers(new ArrayList<>());
-
-        CourseType frontendType = new CourseType();
-        frontendType.setId(2L);
-        frontendType.setCode("FRONTEND");
-        frontendType.setDescription("Frontend development");
-
-        Course frontendCourse = new Course();
-        frontendCourse.setId(3L);
-        frontendCourse.setTitle("React Basics");
-        frontendCourse.setType(frontendType);
-        frontendCourse.setLinkImg("image3.jpg");
-        frontendCourse.setDescription("desc3");
-        frontendCourse.setActive(true);
-        frontendCourse.setLessons(new ArrayList<>());
-        frontendCourse.setUsers(new ArrayList<>());
-
-        List<Course> allCourses = List.of(course, backendCourse1, frontendCourse);
-
-        CourseResponse response1 = new CourseResponse("1", "Spring Boot Basics", "BACKEND", "image1.jpg", "desc1", 0);
-        CourseResponse response2 = new CourseResponse("2", "Spring Boot", "BACKEND", "image2.jpg", "desc2", 0);
-        CourseResponse response3 = new CourseResponse("3", "React Basics", "FRONTEND", "image3.jpg", "desc3", 0);
-
-        when(courseRepository.findAllWithType()).thenReturn(allCourses);
-        when(courseMapper.toCourseResponse(any(Course.class)))
-                .thenReturn(response1)
-                .thenReturn(response2)
-                .thenReturn(response3);
-
-        // Act
-        List<CourseGroupResponse> result = courseService.listAllCourses();
-
-        // Assert
-        assertNotNull(result);
-        assertEquals(2, result.size());
-
-        // Verify BACKEND group
-        CourseGroupResponse backendGroup = result.stream()
-                .filter(g -> g.getCourseTypeCode().equals("BACKEND"))
-                .findFirst()
-                .orElse(null);
-        assertNotNull(backendGroup);
-        assertEquals(2, backendGroup.getCourses().size());
-
-        // Verify FRONTEND group
-        CourseGroupResponse frontendGroup = result.stream()
-                .filter(g -> g.getCourseTypeCode().equals("FRONTEND"))
-                .findFirst()
-                .orElse(null);
-        assertNotNull(frontendGroup);
-        assertEquals(1, frontendGroup.getCourses().size());
-
-        verify(courseRepository, times(1)).findAllWithType();
-    }
-
-    @Test
-    @DisplayName("listAllCourses - Should return empty list when no courses exist")
-    void testListAllCourses_Empty() {
-        // Arrange
-        when(courseRepository.findAllWithType()).thenReturn(new ArrayList<>());
-
-        // Act
-        List<CourseGroupResponse> result = courseService.listAllCourses();
-
-        // Assert
-        assertNotNull(result);
-        assertEquals(0, result.size());
-        verify(courseRepository, times(1)).findAllWithType();
-    }
-
-    @Test
-    @DisplayName("listAllCourses - Should handle single course")
-    void testListAllCourses_SingleCourse() {
-        // Arrange
-        List<Course> courses = List.of(course);
-        CourseResponse response = new CourseResponse("1", "Spring Boot Basics", "BACKEND", "image.jpg", "desc", 0);
+        List<Course> courses = Arrays.asList(course);
 
         when(courseRepository.findAllWithType()).thenReturn(courses);
-        when(courseMapper.toCourseResponse(course)).thenReturn(response);
+        when(courseMapper.toCourseResponse(course)).thenReturn(courseResponse);
 
         // Act
         List<CourseGroupResponse> result = courseService.listAllCourses();
@@ -443,8 +238,73 @@ class CourseServiceImplTest {
         // Assert
         assertNotNull(result);
         assertEquals(1, result.size());
-        assertEquals("BACKEND", result.get(0).getCourseTypeCode());
-        assertEquals(1, result.get(0).getCourses().size());
-        verify(courseRepository, times(1)).findAllWithType();
+        assertEquals("BASIC", result.get(0).getCourseTypeCode());
+        verify(courseRepository).findAllWithType();
+    }
+
+    @Test
+    @DisplayName("Should purchase course successfully - new purchase")
+    void testPurchaseCourse_NewPurchase() {
+        // Arrange
+        when(userRepository.findById(1L)).thenReturn(Optional.of(user));
+        when(courseRepository.findById(1L)).thenReturn(Optional.of(course));
+        when(userCourseRepository.findByUserAndCourse(user, course)).thenReturn(Optional.empty());
+        when(courseMapper.toCourseResponse(course)).thenReturn(courseResponse);
+
+        // Act
+        CourseResponse result = courseService.purchaseCourse(1L, 1L);
+
+        // Assert
+        assertNotNull(result);
+        verify(userCourseRepository).save(any(UserCourse.class));
+    }
+
+    @Test
+    @DisplayName("Should purchase course successfully - already purchased")
+    void testPurchaseCourse_AlreadyPurchased() {
+        // Arrange
+        UserCourse existingUserCourse = new UserCourse();
+        existingUserCourse.setUser(user);
+        existingUserCourse.setCourse(course);
+        existingUserCourse.setActive(false);
+
+        when(userRepository.findById(1L)).thenReturn(Optional.of(user));
+        when(courseRepository.findById(1L)).thenReturn(Optional.of(course));
+        when(userCourseRepository.findByUserAndCourse(user, course))
+                .thenReturn(Optional.of(existingUserCourse));
+        when(courseMapper.toCourseResponse(course)).thenReturn(courseResponse);
+
+        // Act
+        CourseResponse result = courseService.purchaseCourse(1L, 1L);
+
+        // Assert
+        assertNotNull(result);
+        assertTrue(existingUserCourse.isActive());
+        verify(userCourseRepository).save(existingUserCourse);
+    }
+
+    @Test
+    @DisplayName("Should throw exception when user not found for purchase")
+    void testPurchaseCourse_UserNotFound() {
+        // Arrange
+        when(userRepository.findById(1L)).thenReturn(Optional.empty());
+
+        // Act & Assert
+        assertThrows(ResponseStatusException.class, () -> {
+            courseService.purchaseCourse(1L, 1L);
+        });
+    }
+
+    @Test
+    @DisplayName("Should throw exception when course not found for purchase")
+    void testPurchaseCourse_CourseNotFound() {
+        // Arrange
+        when(userRepository.findById(1L)).thenReturn(Optional.of(user));
+        when(courseRepository.findById(1L)).thenReturn(Optional.empty());
+
+        // Act & Assert
+        assertThrows(ResponseStatusException.class, () -> {
+            courseService.purchaseCourse(1L, 1L);
+        });
     }
 }
